--- a/html-assignment/styles/main.css
+++ b/html-assignment/styles/main.css
@@ -8,3 +8,11 @@ body{
 header, footer{
     background-color: black;
 }
+
+.site-title{
+    color: #B3C414;
+}
+
+#my-image{
+    box-shadow: 0px 0px 2px 1px black;
+}
