--- a/html-assignment/styles/main.css
+++ b/html-assignment/styles/main.css
@@ -32,6 +32,17 @@ h2, h3{
     font-size: 200%;
 }
 
-a:active{
-    color: #B3C414;
+a:link{
+    background-color: #333333;
+    color: #C8D455;
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px;
+    margin: 5px 0px 5px 5px;
+    border-radius: 10px;
+}
+
+a:active, a:visited, a:hover{
+    color: #F08A4B;
+    text-decoration: none;
 }
