Added reverse colours to link hover state

--- a/html-assignment/styles/main.css
+++ b/html-assignment/styles/main.css
@@ -42,7 +42,12 @@ a:link{
     border-radius: 10px;
 }
 
-a:active, a:visited, a:hover{
+a:visited{
     color: #F08A4B;
     text-decoration: none;
+}
+
+a:hover{
+    background-color: #C8D455;
+    color: #333333;
 }
