--- a/html-assignment/styles/main.css
+++ b/html-assignment/styles/main.css
@@ -1,18 +1,27 @@
+@font-face {
+    font-family: 'GraphikArts';
+    src: url(fonts/graphik_arts.ttf) format('ttf');
+}
+
 body{
-    background-color: #333333;
+    
     color: aliceblue;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
+    background-color: #222222;
 }
 
 header, footer{
-    background-color: black;
+    background-color: #333333;
     padding: 10px;
     border-radius: 10px;;
 }
 
 .site-title{
-    color: #B3C414;
+    color: #A0C116;
+    text-transform: uppercase;
+    font-family: 'Graphik Arts';
+    font-size: 40pt;
 }
 
 #my-image{
@@ -28,16 +37,12 @@ h1, h2, h3{
     font-family: 'Teko', sans-serif;
 }
 
-h1{
-    font-size: 350%;
-}
-
 h2{
-    font-size: 250%;
+    font-size: 40pt;
 }
 
 h3{
-    font-size: 150%;
+    font-size: 30pt;
 }
 
 #image-heading{
