--- a/html-assignment/styles/main.css
+++ b/html-assignment/styles/main.css
@@ -54,6 +54,8 @@ a:link{
     background-color: #222222;
     color: #86BF17;
     border: 1px solid #86BF17;
+    font-family: 'Teko', sans-serif;
+    font-size: 24px;
     text-decoration: none;
     display: inline-block;
     padding: 5px;
