--- a/html-assignment/styles/main.css
+++ b/html-assignment/styles/main.css
@@ -8,11 +8,11 @@ body{
     color: aliceblue;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
-    background-color: #222222;
+    background-color: #111111;
 }
 
 header, footer{
-    background-color: #333333;
+    background-color: #000000;
     padding: 10px;
     border-radius: 10px;;
 }
@@ -21,7 +21,7 @@ header, footer{
     color: #86BF17;
     text-transform: uppercase;
     font-family: 'Graphik Arts';
-    font-size: 40pt;
+    font-size: 40px;
 }
 
 #my-image{
@@ -41,24 +41,25 @@ h1{
 h2{
     color: #008F86;
     font-family: 'Teko', sans-serif;
-    font-size: 40pt;
+    font-size: 40px;
     font-weight: lighter;
 }
 
 h3{
     color: #008F86;
     font-family: 'Teko', sans-serif;
-    font-size: 30pt;
+    font-size: 30px;
     font-weight:lighter;
 }
 
 #image-heading{
     font-family: 'Teko', sans-serif;
     font-size: 200%;
+    font-weight: lighter;
 }
 
 a:link{
-    background-color: #222222;
+    background-color: #111111;
     color: #86BF17;
     border: 1px solid #86BF17;
     font-family: 'Teko', sans-serif;
@@ -77,5 +78,9 @@ a:visited{
 
 a:hover{
     background-color: #86BF17;
-    color: #222222;
+    color: #111111;
+}
+
+ul>li:nth-child(odd){
+    background-color: #333333;
 }
