added header image

--- a/midterm/styles/main.css
+++ b/midterm/styles/main.css
@@ -73,4 +73,13 @@ body{
 {
     width: 75%;
     margin: 0 auto;
+    background-color: chocolate;
+}
+
+.header-image{
+    width: 100%;
+}
+
+.header-title{
+    
 }
