Adjusted margins/padding for content sections/headers

--- a/midterm/styles/main.css
+++ b/midterm/styles/main.css
@@ -66,6 +66,15 @@ html{
     box-sizing: inherit;
   }
 
+/************************************************************************
+                        Clearfix
+*************************************************************************/
+  .clearfix:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
 /***************************************************************************
                               Testing                                      
 ****************************************************************************/
@@ -104,7 +113,7 @@ body{
 }
 
 header{
-    margin-bottom: 2rem;
+    margin-bottom: -2rem;
 }
 
 .header-image{
@@ -112,21 +121,32 @@ header{
 }
 
 .header-title{
-    display:inline;
     position: relative;
-    bottom: 8.5rem;
+    bottom: 5.5rem;
     left: 23rem;
     margin-top: -1em;
 }
 
-.clearfix:after{
-    content: "";
-    display: table;
-    clear: both;
+/************************************************************************
+                              Spacing
+*************************************************************************/
+main, article, section{
+    margin: 1.5rem 0em;
 }
+
+main{
+    padding: 0.5rem;
+}
+
+h2, h3, p{
+    padding: 0.25em 0em;
+}
+
 /************************************************************************
                               Fonts
 *************************************************************************/
+
+
 h1{
     font-size: 3rem;
     color: white;
@@ -134,10 +154,12 @@ h1{
 
 h2{
     font-size: 2rem;
+    color:black;
 }
 
 h3{
     font-size: 1.5rem;
+    color:black;
 }
 
 /************************************************************************
