--- a/midterm/styles/main.css
+++ b/midterm/styles/main.css
@@ -108,7 +108,7 @@ body{
 
 .container
 {
-    width: 1024px;
+    width: 900px;
     margin: 0 auto;
 }
 
@@ -127,19 +127,29 @@ header{
     margin-top: -1em;
 }
 
+.text-wrap-right{
+    width:25%;
+    float:left;
+    padding-right: 0.25em;
+    padding-bottom: 0.25em;
+}
+
 /************************************************************************
                               Spacing
 *************************************************************************/
-main, article, section{
-    margin: 1.5rem 0em;
+
+/*spacing below content sections*/
+main, article, section, header, p{
+    margin: 0em 0em 0.5rem 0em;
 }
 
 main{
     padding: 0.5rem;
 }
 
-h2, h3, p{
-    padding: 0.25em 0em;
+/* Padding above and below headers */
+h2, h3{
+    padding: 0.5em 0em 0.25em 0em;
 }
 
 /************************************************************************
