--- a/midterm/styles/main.css
+++ b/midterm/styles/main.css
@@ -101,12 +101,13 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     line-height: 1.3rem;
+    margin-top: -8px;
 }
 
 .container
 {
     background-color: #d4e9e7;
-    width: 1024px;
+    width: 990px;
     margin: 0 auto;
 }
 
@@ -116,9 +117,10 @@ body{
 }
 
 .header-title{
+    width: fit-content;
     position: relative;
-    bottom: 6.5rem;
-    left: 23rem;
+    bottom: 5.5rem;
+    left: 22rem;
     margin-top: -0.5em;
 }
 
@@ -142,9 +144,9 @@ p{
                               Spacing
 *************************************************************************/
 
-/*spacing below content sections*/
-main, article, section, header, p{
-    margin-bottom: 0.5em;
+/*Default content spacing*/
+main, article, aside, section, form, header, p, ul{
+    margin: 0.5rem 0rem;
 }
 
 main{
@@ -152,14 +154,21 @@ main{
 }
 
 /* Padding above and below headers */
-h2, h3, h4{
+h2{
+    padding: 0.5em 0em
+} 
+
+h3{
     padding: 0.5em 0em 0.25em 0em;
+}
+
+h4{
+    padding: 0.25em 0em 0.15em 0em;
 }
 
 form{
     border: 1px solid black;
     padding: 1.5rem 1rem 1rem 1rem;
-    margin-top: 0.6rem;
     font-size: 1.1rem;
 }
 
