--- a/midterm/styles/main.css
+++ b/midterm/styles/main.css
@@ -247,3 +247,10 @@ input[type="text"], textarea{
 .radio_group{
     padding: 0.5em 0em 1em;
 }
+
+input[type="submit"]{
+    font-size: 0.5em;
+    padding: 1em;
+    background: none;
+    border: 1px solid black;
+}
