--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -57,6 +57,10 @@ table {
     border: 1px solid royalblue;
 }
 
+form{
+    border: 1px solid pink;
+}
+
 /************************************/
 /************** Mobile **************/
 /************************************/
@@ -74,7 +78,7 @@ table {
 /***** navigation bar *****/
 nav{
     display:grid;
-    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr) 0.5fr;
     grid-template-columns: 1;
 }
 
@@ -90,7 +94,23 @@ color: #222222;
 background-color: #c78b07;
 }
 
+/*********** Search Bar **********/
+#search{
+    display: flex;
+    height: 1.5rem;
+    margin-bottom: -5rem;
+}
 
+#search input{
+    flex-basis: 100% ;
+}
+
+#search button{
+    color: #c78b07;
+    border: 1px solid #c78b07;
+    background: none;
+    
+}
 
 /******* Header *******/
 header{
