--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -170,6 +170,19 @@ label, input[type="submit"]{
     
 }
 
+/***** Tables *****/
+table{
+    width:100%;
+}
+
+caption{
+    text-align: left;
+}
+
+td, th{
+    padding: 1em;
+    border: 1px solid black;
+}
 /**************** Targeted Styles ****************/
 
 /******* Header *******/
