Separated the nav and the header

--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -140,6 +140,10 @@ a{
     background-position: center;
 }
 
+.dark{
+    background-color: #222222;
+}
+
 /**** Forms ****/
 input, textarea, label{
     display:block;
