--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -274,6 +274,16 @@ background-color: #c78b07;
     padding: 3rem 0rem;
 }
 
+/****** Services *****/
+#services{
+    background-color: #ffffff;
+}
+
+#services section{
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+
 /****** Vision *******/
 #vision{
     background-image: url(../images/vision.jpg);
