--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -48,8 +48,7 @@ table {
 	border-spacing: 0;
 }
 
-/*********************** Border Box **************************/
-/* Setting default box-sizing */
+/*********************** Border Box **************************
 html{
     box-sizing: border-box;
   }
@@ -59,6 +58,7 @@ html{
   *:after{
     box-sizing: inherit;
   }
+*/
 
 /************** Testing ************
 .section-container{
@@ -134,6 +134,14 @@ section{
     background-color:#ffe6ac;
 }
 
+.dark{
+    background-color: #222222;
+}
+
+.gold{
+    background-color: #c78b07;
+}
+
 .faded{
     background-color: rgba(34, 34, 34, 0.65);
     color: #ffffff;
@@ -143,10 +151,6 @@ section{
     background-size:cover;
     background-attachment: local;
     background-position: center;
-}
-
-.dark{
-    background-color: #222222;
 }
 
 /**** Forms ****/
@@ -232,10 +236,6 @@ header, footer{
 }
 
 /******** Navigation Bar *********/
-header .section-container{
-    background-color: #222222;
-}
-
 nav{
     background-color: #c78b07;
     display: flex;
@@ -250,7 +250,6 @@ nav{
 
 /*** nav links ***/
 nav a{
-    width:100%;
     padding: 1em;
     background-color: #222222;
     color: #c78b07;
@@ -300,16 +299,45 @@ footer a, footer a:visited, footer a:hover, footer a:active{
  ******************************************************************/
 
  @media screen and (min-width:760px){
-    nav, .nav-bar{
-        display:flex;
+    
+    #nav-bar{
+        display: flex;
         flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
     }
 
-    nav a, .header-flex-item, #logo{
-        width:fit-content;
+    /***** Horizontal navigation bar ******/
+    #nav-bar{
+        background:#222222;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    nav{
+        background-color: #222222;
+        flex-basis:content;
+        flex-grow: 1;
+        flex-direction: row;
+        align-items: center;
+        justify-content:center;
     }
 
-    img.header{
-        width: auto;
+    nav a{
+        padding: 1em;
+        flex-grow: 1;
     }
+
+    .nav-flex-item{
+        flex-basis: content;
+    }
+
+    
+
+    #logo{
+        margin: 0px;
+    }
+
  }
