--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -106,6 +106,11 @@ p{
     margin-top: 1em;
     margin-bottom: 1em;
     line-height: 1.5em;
+    font-weight: 600;
+}
+
+.faded p{
+    font-weight: 400;
 }
 
 /*** Links ****/
@@ -300,11 +305,20 @@ footer a, footer a:visited, footer a:hover, footer a:active{
 
  @media screen and (min-width:760px){
 
+    /******************** Global Styles *******************/
     body{
-        font-size: 16px;
+        font-size: 12px;
     }
+
+    .button{
+        padding: 2em;
+    }
+
+
     
-    /******************* Navigation ***********************/
+/******************** Targeted Styles *********************/
+
+    /****** Navigation ********/
 
     /* flex container for logo, nav, and search bar */
     #nav-bar{
@@ -325,7 +339,6 @@ footer a, footer a:visited, footer a:hover, footer a:active{
 
     /* Have nav links grow to fit size of page */
     nav a{
-        padding: 1em;
         flex-grow: 1;
         text-align: center;
     }
@@ -340,6 +353,24 @@ footer a, footer a:visited, footer a:hover, footer a:active{
         margin-right: 2.5rem;
     }
 
+    #about{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 
+    #about h2{
+        line-height: 1em;
+        margin: 0rem;
+    }
+
+    #about section{
+        margin: 0rem;
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+    }
+
+    #about img{
+        height: 100%;
+    }
 
  }
