--- a/final-assignment/styles/main.css
+++ b/final-assignment/styles/main.css
@@ -131,7 +131,7 @@ section{
     color: #222222;
 }
 
-.section-container, .text-container{
+.section-container, .content-container, .text-container{
     padding:0.5rem;
 }
 
@@ -280,7 +280,8 @@ background-color: #c78b07;
 /********** Welcome **************/
 #home{
     background-image: url(../images/main-banner.jpg);
-    padding: 3rem 0rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 /****** Services *****/
@@ -310,6 +311,13 @@ footer a, footer a:visited, footer a:hover, footer a:active{
         font-size: 12px;
     }
 
+    .section-container{
+        margin-left: 0rem;
+        margin-right: 0rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
     section{
         margin: 0rem;
         padding-top: 0rem;
@@ -321,7 +329,7 @@ footer a, footer a:visited, footer a:hover, footer a:active{
         padding: 2em;
     }
 
-    .full-width{
+    a.full-width{
         display:block;
         text-align: center;
     }
@@ -384,6 +392,7 @@ footer a, footer a:visited, footer a:hover, footer a:active{
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 0.5rem;
+        margin: 0.5rem 0rem;
     }
 
     #services .half-width:nth-child(1){
@@ -411,4 +420,18 @@ footer a, footer a:visited, footer a:hover, footer a:active{
         grid-column-start: 5;
         grid-column-end: span 2;
     }
+
+    /***** Our Team ****/
+    #team section:nth-child(odd){
+        display:flex;
+        flex-direction: row;
+    }
+
+    #team section:nth-child(even){
+        display:flex;
+        flex-direction: row-reverse;
+    }
+
+
+
  }
